[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/StartUpScreen/Go_Back_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/CandyShop.png" type="Texture" id=2]
[ext_resource path="res://assets/CALIBRI.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://src/scripts/PerimeterBeginnerEnterButton.gd" type="Script" id=4]
[ext_resource path="res://src/scripts/LinkButton.gd" type="Script" id=5]
[ext_resource path="res://src/drop_zone.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/DraggableSprite.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/bigcookie.jpg" type="Texture" id=8]
[ext_resource path="res://assets/white.png" type="Texture" id=9]
[ext_resource path="res://src/scripts/HelpButton.gd" type="Script" id=10]
[ext_resource path="res://assets/Triangle.png" type="Texture" id=11]
[ext_resource path="res://assets/CandyMusic.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/POP.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 21
outline_size = 1
outline_color = Color( 0.0509804, 0.0431373, 0.0431373, 1 )
font_data = ExtResource( 3 )

[node name="Node2D2" type="Node2D"]

[node name="SceneBackground" type="Sprite" parent="."]
position = Vector2( -480, -68 )
scale = Vector2( 0.792758, 0.695402 )
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( 1254.48, 534.223 )

[node name="BackButton" parent="." instance=ExtResource( 1 )]
margin_left = 902.0
margin_top = 531.0
margin_right = 996.0
margin_bottom = 585.0
disabled = true
reference_path = "res://src/StartUpScreen/BeginnerChallenge/BeginnerMap2.tscn"

[node name="QuestionBackground" type="ColorRect" parent="."]
margin_left = 37.0
margin_top = 416.0
margin_right = 502.0
margin_bottom = 501.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionRichTextLabel" type="RichTextLabel" parent="."]
margin_left = 47.0
margin_top = 423.0
margin_right = 512.0
margin_bottom = 508.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Drag and drop peppermints onto the cookie. How many peppermints will fit the perimeter of the cookie?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterButton" type="Button" parent="."]
margin_left = 781.0
margin_top = 531.0
margin_right = 875.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 4 )
text = "Enter"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectWindowDialog" type="WindowDialog" parent="EnterButton"]
margin_left = -719.0
margin_top = -486.0
margin_right = -183.0
margin_bottom = -314.0
window_title = "-- Correct --"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectColorRect" type="ColorRect" parent="EnterButton/CorrectWindowDialog"]
margin_right = 536.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectRichTextLabel" type="RichTextLabel" parent="EnterButton/CorrectWindowDialog"]
anchor_left = 0.118
anchor_top = 0.174
anchor_right = 0.118
anchor_bottom = 0.174
margin_left = -28.248
margin_top = 9.072
margin_right = 433.752
margin_bottom = 92.072
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Great job! You completed this stage. Move on to the next stage on the map. You're doing great!"

[node name="IncorrectWindowDialog" type="WindowDialog" parent="EnterButton"]
margin_left = 294.0
margin_top = -402.0
margin_right = 755.0
margin_bottom = -201.0
window_title = "-- Incorrect --"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncorrectColorRect" type="ColorRect" parent="EnterButton/IncorrectWindowDialog"]
margin_right = 460.0
margin_bottom = 200.0

[node name="IncorrectRichTextLabel" type="RichTextLabel" parent="EnterButton/IncorrectWindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.5
margin_top = -57.0
margin_right = 167.5
margin_bottom = 57.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
text = "Good try...give it another shot. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoAttemptsWindowDialog" type="WindowDialog" parent="EnterButton"]
margin_left = 301.0
margin_top = -114.0
margin_right = 762.0
margin_bottom = 87.0
window_title = "-- Out of Attempts --"

[node name="NoAttemptsColorRect" type="ColorRect" parent="EnterButton/NoAttemptsWindowDialog"]
margin_right = 460.0
margin_bottom = 200.0

[node name="NoAttemptsRichTextLabel" type="RichTextLabel" parent="EnterButton/NoAttemptsWindowDialog"]
margin_left = 54.0
margin_top = 40.0
margin_right = 404.0
margin_bottom = 160.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "Good try. Sadly, you're out of attempts. Go ahead try another challenge."

[node name="TestPopupDialog" type="PopupDialog" parent="."]
anchor_left = -0.858
anchor_top = -3.906
anchor_right = -0.858
anchor_bottom = -3.906
margin_left = 134.0
margin_top = 83.0
margin_right = 388.0
margin_bottom = 217.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Hello there
"
}

[node name="UserAnswerLineEdit" type="LineEdit" parent="."]
margin_left = 533.0
margin_top = 415.0
margin_right = 998.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triangle" type="Polygon2D" parent="."]
position = Vector2( 74, 25 )
scale = Vector2( 0.855362, 0.855362 )
z_index = -1
texture = ExtResource( 8 )
texture_offset = Vector2( -275, 0 )
texture_scale = Vector2( 0.954, 0.821 )
polygon = PoolVector2Array( 498, 7, 266, 408, 730, 408 )

[node name="drop_zone" parent="." instance=ExtResource( 6 )]
position = Vector2( 840, 327 )

[node name="drop_zone2" parent="." instance=ExtResource( 6 )]
position = Vector2( 500, 32 )

[node name="drop_zone3" parent="." instance=ExtResource( 6 )]
position = Vector2( 301, 374 )

[node name="drop_zone4" parent="." instance=ExtResource( 6 )]
position = Vector2( 343, 303 )

[node name="drop_zone5" parent="." instance=ExtResource( 6 )]
position = Vector2( 422, 165 )

[node name="drop_zone6" parent="." instance=ExtResource( 6 )]
position = Vector2( 540, 99 )

[node name="drop_zone7" parent="." instance=ExtResource( 6 )]
position = Vector2( 578, 165 )

[node name="drop_zone8" parent="." instance=ExtResource( 6 )]
position = Vector2( 699, 374 )

[node name="drop_zone9" parent="." instance=ExtResource( 6 )]
position = Vector2( 619, 374 )

[node name="drop_zone10" parent="." instance=ExtResource( 6 )]
position = Vector2( 541, 374 )

[node name="drop_zone11" parent="." instance=ExtResource( 6 )]
position = Vector2( 457, 374 )

[node name="drop_zone12" parent="." instance=ExtResource( 6 )]
position = Vector2( 379, 374 )

[node name="drop_zone13" parent="." instance=ExtResource( 6 )]
position = Vector2( 382, 236 )

[node name="drop_zone14" parent="." instance=ExtResource( 6 )]
position = Vector2( 460, 99 )

[node name="drop_zone15" parent="." instance=ExtResource( 6 )]
position = Vector2( 658, 303 )

[node name="drop_zone16" parent="." instance=ExtResource( 6 )]
position = Vector2( 619, 236 )

[node name="PeppermintBackground" type="Sprite" parent="."]
position = Vector2( 840, 326 )
scale = Vector2( 0.491111, 0.491111 )
z_index = -1
texture = ExtResource( 9 )

[node name="PeppermintSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="HelpButton" type="Button" parent="."]
margin_left = 356.0
margin_top = 534.0
margin_right = 447.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 8 )
text = "Help"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpWindowDialog" type="WindowDialog" parent="HelpButton"]
margin_left = -339.0
margin_top = -490.0
margin_right = 629.0
margin_bottom = 41.0
custom_fonts/title_font = SubResource( 9 )
popup_exclusive = true
window_title = "Help Window"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HelpButton/HelpWindowDialog"]
margin_top = 2.0
margin_right = 968.0
margin_bottom = 534.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HelpButton/HelpWindowDialog"]
margin_left = 48.0
margin_top = 147.0
margin_right = 412.0
margin_bottom = 382.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 10 )
text = "Hint:
In the traingle given, X is the perimeter where it is equal to the sum of all sides (A+B+C).
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YoutubeTutorialButton" type="LinkButton" parent="HelpButton/HelpWindowDialog"]
margin_left = 159.0
margin_top = 492.0
margin_right = 324.0
margin_bottom = 525.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Watch Tutorial"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriangleSprite" type="Sprite" parent="HelpButton/HelpWindowDialog"]
position = Vector2( 674, 251 )
texture = ExtResource( 11 )

[node name="SceneMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 1.0
autoplay = true

[node name="Area2D" parent="." instance=ExtResource( 7 )]

[node name="Area2D2" parent="." instance=ExtResource( 7 )]

[node name="Area2D3" parent="." instance=ExtResource( 7 )]

[node name="Area2D4" parent="." instance=ExtResource( 7 )]

[node name="Area2D5" parent="." instance=ExtResource( 7 )]

[node name="Area2D6" parent="." instance=ExtResource( 7 )]

[node name="Area2D7" parent="." instance=ExtResource( 7 )]

[node name="Area2D8" parent="." instance=ExtResource( 7 )]

[node name="Area2D9" parent="." instance=ExtResource( 7 )]

[node name="Area2D10" parent="." instance=ExtResource( 7 )]

[node name="Area2D11" parent="." instance=ExtResource( 7 )]

[node name="Area2D12" parent="." instance=ExtResource( 7 )]

[node name="Area2D13" parent="." instance=ExtResource( 7 )]

[node name="Area2D14" parent="." instance=ExtResource( 7 )]

[node name="Area2D15" parent="." instance=ExtResource( 7 )]

[node name="Area2D16" parent="." instance=ExtResource( 7 )]

[node name="Area2D17" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="HelpButton/HelpWindowDialog/YoutubeTutorialButton" to="HelpButton/HelpWindowDialog/YoutubeTutorialButton" method="_on_LinkButton_pressed"]
